test/arrays/compilerErrors/opCount-assoc.chpl

var AssocBaseDom = {1, 2, 3};
var AssocBaseArr: [AssocBaseDom]int;

writeln(AssocBaseArr # 1);
